# sarus-editor-plugin

./: Cargo.toml  README.md
resources/: example.sarus  start.sarus
src/: atomic_f32.rs  code_editor.rs  compiler.rs  compiler_interface.rs  float_id.rs  graphs.rs  heap_data.rs  highligher.rs  lib.rs  logging.rs  preset_manager.rs  sarus_egui_lib.rs  syntax_highlighting.rs  units.rs
src/correlation_match/: complex.rs  cross_correlation.rs  display.rs  fft.rs  iter_windows.rs  mod.rs  parabolic_interpolation.rs  ring_buffer.rs
