[package]
name = "sarus-editor-plugin"
version = "0.1.0"
edition = "2018"
license = "GPL-3.0"

[lib]
crate-type = ["cdylib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
baseplug = { git = "https://github.com/DGriffin91/baseplug.git", branch = "shared" }
baseview = { git = "https://github.com/RustAudio/baseview.git", rev = "6172090be36e36d2dad15863688dc52b7434a082" }
egui-baseview = { git = "https://github.com/BillyDM/egui-baseview", branch = "main" }
egui = "0.15"
serde = { version = "1.0", features = ["derive"] }
raw-window-handle = "0.3"
vst = "0.2"
keyboard-types = { version = "0.5.0", default-features = false }
dirs = "4"
directories = "4"
log = "0.4"
log-panics = "2"
simplelog = "0.8"
rand = "0.8.4"
ron = "0.6"
ringbuf = "0.2.6"
sarus = { git = "https://github.com/DGriffin91/sarus.git" }
anyhow = "1.0.43"
triple_buffer = "5.0.6"
notify = "5.0.0-pre.13"
rfd = "0.5.0"
toml = "0.5"
syntect = { version = "4", default-features = false, features = ["default-fancy"] }
